# toolbox

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  components.d.ts  package.json  tsconfig.json  vite.config.js  vite.config.ts
crates/base/: Cargo.toml
crates/base/src/: base64.rs  cffc.rs  charset.rs  checksum.rs  datetime.rs  hash.rs  hex.rs  ip.rs  jwt.rs  lib.rs  qrcode.rs  string.rs  url.rs  url_params.rs  uuid.rs
crates/database/: Cargo.toml
crates/database/src/: generator.rs  lib.rs
crates/database/src/diff/: mod.rs  report.rs  standard_check.rs
crates/database/templates/code/java/: controller.html  entity.html  mapper.html  serviceImpl.html
crates/datafaker/: Cargo.toml
crates/datafaker/fakerdata/: address-word  college-major  community-name  female-first-name  qq-nick-name
crates/datafaker/src/: lib.rs
crates/datafaker/src/providers/: address.rs  area.rs  education.rs  internet.rs  name.rs  number.rs  person.rs  regex.rs  sequence.rs  text.rs  uuid.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: lib.rs
crates/openapi/: Cargo.toml
crates/openapi/src/: content.rs  example.rs  extensions.rs  external_docs.rs  header.rs  info.rs  lib.rs  link.rs  path.rs  response.rs  schema.rs  security.rs  xml.rs
crates/openapi/templates/: openapi.md
crates/ui/: Cargo.toml  errors.txt  fix_components.ps1
crates/ui/src/: config_store.rs  main.rs
crates/ui/src/views/: base64_encoder.rs  base_converter.rs  charset_encoder.rs  clipboard_manager.rs  code_snippet.rs  database_diff.rs  excalidraw.rs  fake_data_generator.rs  file_verify.rs  hash_calculator.rs  ip_converter.rs  json_editor.rs  jwt_decoder.rs  markdown_editor.rs  messy_code_recover.rs  mod.rs  qrcode_generator.rs  regex_visualizer.rs  settings.rs  sql_formatter.rs  syntax_highlight.rs  system_monitor.rs  timestamp_converter.rs  todo_list.rs  transform_filetype.rs  transform_openapi.rs  url_encoder.rs  uuid_generator.rs  xml_formatter.rs
src/: App.vue  Provider.vue  db.js  main.js  main.ts  menu.js  menu.ts  router.js  router.ts  tool.js  vite-env.d.ts
src-tauri/: .env  .gitignore  Cargo.toml  README.md  datafaker.md  error.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: datafaker.excalidraw
src-tauri/fakerdata/: community-suffix  ethnic-cn  last-name  male-first-name  phone-code.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250527101033_database_connect.down.sql  20250527101033_database_connect.up.sql  20250527101033_datasource_info.down.sql  20250527101033_datasource_info.up.sql  20250804154004_code_snippet.down.sql  20250804154004_code_snippet.up.sql
src-tauri/src/: base.rs  database.rs  datafaker.rs  lib.rs  main.rs  migrations.rs  monitor.rs
src-tauri/src/database/: generator.rs  mod.rs
src-tauri/src/database/cores/: generator.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/database/diff/: mod.rs  report.rs  standard_check.rs  word_checker
src-tauri/src/database/generator/: generator.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  template.rs
src-tauri/src/datafaker/: mod.rs
src-tauri/src/datafaker/generators/: mod.rs  number.rs  sequence.rs
src-tauri/src/datafaker/providers/: address.rs  area.rs  datetime.rs  education.rs  email.rs  emoji.rs  file.rs  internet.rs  mod.rs  name.rs  number.rs  person.rs  phone_number.rs  regex.rs  sequence.rs  text.rs  uuid.rs
src-tauri/src/lib/: base64.rs  baseconverter.rs  cffc.rs  checksum.rs  color.rs  datetime.rs  diff.rs  escape.rs  gzip.rs  hash.rs  hex.rs  ip.rs  lib.rs  markdown.rs  string.rs  struct.rs  unicode.rs  url.rs  url_params.rs  uuid.rs  xmlformat.rs
src-tauri/src/libs/: base64.rs  cffc.rs  charset.rs  checksum.rs  colorblind.rs  cronparse.rs  datetime.rs  hash.rs  hex.rs  html.rs  imageconverter.rs  imgcomp.rs  ip.rs  jsonformat.rs  jwt.rs  loremipsum.rs  mod.rs  qrcode.rs  regex.rs  sqlformat.rs  url.rs  url_params.rs  uuid.rs  xmlvalidator.rs
src-tauri/src/monitor/: mod.rs  monitor.rs
src-tauri/src/openapi/: content.rs  encoding.rs  header.rs  mod.rs  path.rs  request_body.rs  response.rs  schema.rs  security.rs  server.rs  tag.rs
src-tauri/templates/code/java/: mapperXml.html  service.html
src-tauri/templates/code/rust/: error.html  mod.html  model.html
src/components/: All.vue  Hash.vue  Setting.vue  TableNode.vue  datafaker.js
src/components/converter/: BaseConversion.vue  Cffc.vue  Cron.vue  Number.vue  Timestamp.vue
src/components/database/: DataGenerator.vue  DatabaseFaker.vue  GeneratorDataPreview.vue
src/components/datafaker/: ColumnDatafakerDrawer.vue  ColumnNode.vue  DatafakerNode.vue  TableNode.vue  constants.ts
src/components/encodedecode/: Base64Text.vue  GZip.vue  Html.vue  JWT.vue  URL.vue
src/components/formatter/: JsonEditor.vue  JsonViewer.vue  SQL.vue  SqlFormatter.vue  XmlFormatter.vue
src/components/generator/: Checksum.vue  Hash.vue  UUID.vue
src/components/graphic/: Excalidraw.vue  QRCode.vue
src/components/network/: IP.vue  IPConvert.vue
src/components/text/: EscapeUnescape.vue  Markdown.vue  RegexTester.vue
src/components/transform/: BaseConversion.vue  Cffc.vue  OpenApi.vue
src/store/: codeSnippet.js  datafakerConfig.ts  db.js  db.ts
src/util/: tool.js  tool.ts
src/views/: All.vue  Home.vue  Setting.vue
src/views/SystemMonitor/: BatteryPanel.vue  CpuPanel.vue  MemoryPanel.vue  ProcessPanel.vue  SensorsPanel.vue  index.vue
src/views/database/: DataGenerator.vue  DatabaseDiff.vue  DatabaseDiffReport.vue  DatabaseDiffSql.vue  DatabaseFaker.vue  DatabaseGeneratorCode.vue  DatabaseStandardCheck.vue  GeneratorConfiguration.vue  GeneratorDataPreview.vue
src/views/encodedecode/: Base64Text.vue  CharsetEncoder.vue  JWT.vue  MessyCodeRecover.vue  URL.vue
src/views/formatter/: JsonEditor.vue  SqlFormatter.vue  XmlFormatter.vue
src/views/generator/: Checksum.vue  Hash.vue  UUID.vue
src/views/graphic/: Excalidraw.vue
src/views/network/: IP.vue
src/views/other/: ClipboardManager.vue  QRCode.vue
src/views/regex/: RegexVisualizer.vue
src/views/snippet/: CodeSnippet.vue
(+53 files in other folders)
