[package]
name = "toolbox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

base64 = "0.21.0"
data-encoding = "2.3.3"
encoding_rs = "0.8.32"
heck = "0.4.1"
hex = "0.4.3"
image_hasher = "1.1.2"
jsonwebtoken = "8.2.0"
md-5 = "0.10.5"
qrcode-generator = "4.1.8"
quick-xml = { version = "0.27.1", features = ["serialize"] }
serde_yaml = "0.9.11"
sha1 = "0.10.5"
sha2 = "0.10.6"
sha3 = "0.10.6"
thiserror = "1.0.38"
toml = "0.5.9"
urlencoding = "2.1.2"
uuid = { version = "1.3.0", features = [
  "v1",
  "v3",
  "v4",
  "v5",
  "v6",
  "v7",
  "v8",
] }
image = { version = "0.24.5" }
time = { version = "0.3.20", features = ["formatting"] }
base-converter = "0.0.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
reqwest = "0.12.15"
tokio = { version = "1.45.0", features = ["full"] }

[dev-dependencies]
serde-transcode = "1.1.1"
