cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "toolbox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
data-encoding = "2.9.0"
encoding_rs = "0.8.32"
heck = "0.5.0"
hex = "0.4.3"
image_hasher = "3.0.0"
jsonwebtoken = "9.3.1"
md-5 = "0.10.6"
qrcode-generator = "5.0.0"
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde_yaml = "0.9.33"
sha1 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"
thiserror = "2.0.12"
toml = "0.8.22"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = [
  "v1",
  "v3",
  "v4",
  "v5",
  "v6",
  "v7",
  "v8",
] }
image = { version = "0.25.6" }
time = { version = "0.3.41", features = ["formatting"] }
base-converter = "2.0.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
reqwest = "0.12.15"
tokio = { version = "1.45.0", features = ["full"] }
utoipa = "5.3.1"
lazy_static = "1.5.0"
tera = { version = "1.20.0", default-features = false }
rust-embed = "8.7.2"
async-trait = "0.1.68"
regex = "1.8.4"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-native-tls",
  "any",
  "all-databases",
] }
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
fastrand = "2.3.0"
anyhow = "1.0.98"
Inflector = "0.11.4"
dashmap = "6.1.0"
symspell = "0.4.5"

[dev-dependencies]
dotenv = "0.15.0"
serde-transcode = "1.1.1"


[profile.dev]
incremental = true          # 以较小的步骤编译您的二进制文件。
rustflags = ["-Zthreads=8"] # 提高编译性能。

[profile.release]
codegen-units = 1                            # 允许 LLVM 执行更好的优化。
lto = true                                   # 启用链接时优化。
opt-level = "s"                              # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"                              # 通过禁用 panic 处理程序来提高性能。
strip = true                                 # 确保移除调试符号。
trim-paths = "all"                           # 从您的二进制文件中移除潜在的特权信息。
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # 提高编译性能。
