cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "toolbox"
version = "0.1.0"
description = "offline toolbox"
authors = ["pujianquan 2190975784@qq.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
database = { path = "../crates/database/" }
base = { path = "../crates/base/" }
openapi = { path = "../crates/openapi/" }
monitor = { path = "../crates/monitor/" }
datafaker = { path = "../crates/datafaker/" }
indexmap = { workspace = true }


tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-notification = { workspace = true }
tokio = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-plugin-sql = { workspace = true }
anyhow = { workspace = true }
tauri-plugin-dialog = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }

# [dev-dependencies]
# dotenv = { workspace = true }
# serde-transcode = { workspace = true }


[profile.dev]
incremental = true          # 以较小的步骤编译您的二进制文件。
rustflags = ["-Zthreads=8"] # 提高编译性能。

[profile.release]
codegen-units = 1                            # 允许 LLVM 执行更好的优化。
lto = true                                   # 启用链接时优化。
opt-level = "s"                              # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"                              # 通过禁用 panic 处理程序来提高性能。
strip = true                                 # 确保移除调试符号。
trim-paths = "all"                           # 从您的二进制文件中移除潜在的特权信息。
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # 提高编译性能。
