[package]
name = "base"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
base64 = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
encoding_rs = { workspace = true }
dashmap = { workspace = true }
time = { workspace = true, features = ["parsing"] }
md-5  = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
qrcode-generator = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }
serde_json = { workspace = true }
fastrand = { workspace = true }
image_hasher = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
quick-xml = { workspace = true }
tokio = { workspace = true }
heck = { workspace = true }
thiserror = { workspace = true }
base-converter = { workspace = true }
anyhow = { workspace = true }