[package]
name = "database"
version = "0.1.0"
edition= { workspace = true }

[dependencies]
database = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
heck = { workspace = true }
tera = { workspace = true }
dashmap = { workspace = true }
regex = { workspace = true }
Inflector = { workspace = true }
rust-embed={ workspace = true }
tokio={ workspace = true }
serde_json = { workspace = true }
