[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
database = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
heck = { workspace = true }
tera = { workspace = true }
dashmap = { workspace = true }
regex = { workspace = true }
Inflector = { workspace = true }
rust-embed={ workspace = true }
tokio={ workspace = true }
serde_json = { workspace = true }
