[package]
name = "datafaker"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
rust-embed = { workspace = true }
thiserror = { workspace = true }
fastrand = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
regex-syntax = { workspace = true }
rand_regex = { workspace = true }
serde_json = { workspace = true }