[package]
name = "datafaker"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
rust-embed = { workspace = true }
thiserror = { workspace = true }
fastrand = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
regex-syntax = { workspace = true }
rand_regex = { workspace = true }
serde_json = { workspace = true }